--- a/src/main/resources/static/pdfjs/web/viewer.css
+++ b/src/main/resources/static/pdfjs/web/viewer.css
@@ -183,7 +183,7 @@ html {
 
 body {
   height: 100%;
-  background-color: #404040;
+  /*background-color: #404040;*/
   background-image: url(images/texture.png);
 }
 
@@ -317,6 +317,7 @@ html[dir='rtl'] .innerCenter {
 #outerContainer {
   width: 100%;
   height: 100%;
+  background-color: #404040;
   position: relative;
 }
 
