优化在线预览，文件加密

--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>文件预览</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <script src="/js/jquery.min.js?v=2.1.4"></script>
     <script src="/js/jQuery-2.2.0.min.js"></script>
     <script type="text/javascript">
