--- a/src/main/resources/templates/createNDA.html
+++ b/src/main/resources/templates/createNDA.html
@@ -4,7 +4,8 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
 
     <title> NDA</title>
@@ -77,7 +78,7 @@
                     <div class="col-sm-8">
                         <select class="form-control" name="username" id="username">
                             <option  value="">--请选择--</option>
-                            <option th:each="user:${users}" th:text="${user.username}" th:value="${user.username}"></option>
+                            <option th:each="user:${users}" th:text="${user.username + user.mobilephone}" th:value="${user.username}"></option>
                         </select>
                     </div>
                 </div>
@@ -119,14 +120,14 @@
                 paramName: "file",
                 maxFilesize: 1000.0, // 上传的文件大小
                 maxFiles:1,//一次性上传的文件数量上限
-                acceptedFiles: ".jpg,.png,.gif,.pdf",
+                acceptedFiles: ".pdf",
                 addRemoveLinks : true,//添加移除文件
                 autoProcessQueue: true,//不自动上传
                 dictCancelUploadConfirmation:'你确定要取消上传吗？',
                 dictMaxFilesExceeded: "只能上传{{maxFiles}}个文件",
                 dictFileTooBig:"文件过大({{filesize}}MB). 上传文件最大支持: {{maxFilesize}}MB.",
                 dictResponseError: '文件上传失败!',
-                dictInvalidFileType: "你不能上传该类型文件,文件类型只能是.jpg,.png,.gif,.pdf。",
+                dictInvalidFileType: "你不能上传该类型文件,文件类型只能是.pdf。",
                 dictCancelUpload: "取消上传",
                 dictCancelUploadConfirmation: "你确定要取消上传吗?",
                 dictRemoveFile: "移除文件",
