--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>NDA | 用户注册</title>
     <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css">
     <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
+    <!--<link href="css/animate.css" rel="stylesheet">-->
+    <!--<link href="css/style.css?v=4.1.0" rel="stylesheet">-->
     <script>if(window.top !== window.self){ window.top.location = window.location;}</script>
     <style type="text/css">
         .form-bg{
@@ -210,14 +212,15 @@
     </div>
 </div>
 <script src="js/jquery.min.js?v=2.1.4"></script>
+<script src="js/bootstrap.min.js?v=3.3.6"></script>
 <script src="js/plugins/iCheck/icheck.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function () {
-        $('.i-checks').iCheck({
-            checkboxClass: 'icheckbox_square-green',
-            radioClass: 'iradio_square-green',
-        });
-    });
+    // $(document).ready(function () {
+    //     $('.i-checks').iCheck({
+    //         checkboxClass: 'icheckbox_square-green',
+    //         radioClass: 'iradio_square-green',
+    //     });
+    // });
     function check() {
         $("#errorPsd").hide();
         $("#passwordError").hide();
