--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>基于Bootstrap的响应式垂直时间轴jQuery插件</title>
     <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/default.css">
@@ -110,7 +110,7 @@
     $('#file-zh').fileinput({
         language: 'zh',
         uploadUrl: '/fileUpload',
-        allowedFileExtensions : ['jpg', 'png','gif','pdf'],
+        allowedFileExtensions : ['pdf'],
         uploadExtraData:{
             recevier:$("#recevier").val(),
             sender:$("#sender").val(),
