--- a/src/main/resources/templates/userUpdate.html
+++ b/src/main/resources/templates/userUpdate.html
@@ -38,9 +38,9 @@
                 <label class="col-sm-12 control-label"></label>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">固定电话：</label>
+                <label class="col-sm-3 control-label">所在公司：</label>
                 <div class="col-sm-8">
-                    <input id="phoneno"  class="form-control valid" placeholder="请输入固定电话" type="text" th:value="${userInfo.phoneno}">
+                    <input id="orgname"  class="form-control valid" placeholder="请输入公司名称" type="text" th:value="${userInfo.orgname}">
                 </div>
             </div>
             <div class="form-group">
