--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -197,6 +197,10 @@
                         <div id="errorPsd" class="form-group" style="display: none">
                             <span style="color: red">两次密码不一致，请重新输入！</span>
                         </div>
+                        <div class="form-group help">
+                            <input type="text" class="form-control" id="orgname" name="orgname" placeholder="请输入公司名称" >
+                            <i class="fa fa-lock"></i>
+                        </div>
                         <div class="form-group">
                             <div class="checkbox i-checks text">
                                 <label class="no-padding">
