--- a/src/main/resources/templates/company/previewPDFJS.html
+++ b/src/main/resources/templates/company/previewPDFJS.html
@@ -29,7 +29,7 @@
 <script type="text/javascript" th:inline="javascript">
     var path = [[ ${path} ]]
     var fullPath = [[ ${fullPath} ]]
-    console.log(path)
+    //console.log(path)
     //获取当前网址，如： http://localhost:8081/index
     var curWwwPath = window.document.location.href;
     //获取主机地址之后的目录，如： idnex
@@ -38,7 +38,7 @@
     //获取主机地址，如： http://localhost:8081
     var localhostPaht = curWwwPath.substring(0, pos);
     var url = localhostPaht+ "/download/outPath/"+path
-    console.log(url)
+   // console.log(url)
     window.open("/pdfjs/web/viewer.html?file="+url,"_self");
 </script>
 
