--- a/src/main/resources/templates/admin/log.html
+++ b/src/main/resources/templates/admin/log.html
@@ -8,19 +8,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
 
-    <title>日志管理</title>
+    <title>管理员 | 日志记录</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <script src="../js/jquery.min.js?v=2.1.4"></script>
     <script src="../js/jQuery-2.2.0.min.js"></script>
     <link href="../css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <!--<link href="../css/font-awesome.css?v=4.4.0" rel="stylesheet">-->
-    <!--<link href="../css/animate.css" rel="stylesheet">-->
-    <!--<link href="../css/style.css?v=4.1.0" rel="stylesheet">-->
-
-    <!--&lt;!&ndash; 引入bootstrap样式 &ndash;&gt;-->
-    <!--<link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">-->
-    <!--&lt;!&ndash; 引入bootstrap-table样式 &ndash;&gt;-->
     <link href="https://cdn.bootcss.com/bootstrap-table/1.11.1/bootstrap-table.min.css" rel="stylesheet">
 
     <!-- jquery -->
@@ -38,10 +31,17 @@
 </head>
 
 <body class="gray-bg">
+
 <div class="container">
-    <div class="row">
+    <div class="row" style="margin-top: 10px;text-align: right;">
         <div class="col-md-12">
-            <table id="tableLogin" class="table table-hover table-condensed"></table>
+            <a class="btn btn-primary" type="button" href="/admin/logout">退出登录</a>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row" >
+        <div class="col-md-12">
             <table id="tableOper" class="table table-hover"></table>
         </div>
     </div>
@@ -49,88 +49,6 @@
 
 
 <script type="text/javascript">
-    $("#tableLogin").bootstrapTable({ // 对应table标签的id
-        method:'POST',
-        contentType: "application/x-www-form-urlencoded",// 解决POST提交问题
-        url: "/admin/getLoginData", // 获取表格数据的url
-
-        cache: false, // 设置为 false 禁用 AJAX 数据缓存， 默认为true
-        striped: true,  //表格显示条纹，默认为false
-        pagination: true, // 在表格底部显示分页组件，默认false
-        pageList: [10, 20, 50, 100], // 设置页面可以显示的数据条数
-        pageSize: 10, // 页面数据条数
-        pageNumber: 1, // 首页页码
-        showHeader : true,
-        paginationPreText: "上一页",
-        paginationNextText: "下一页",
-        paginationFirstText: "首页",
-        paginationLastText: "末页",
-        clickToSelect: false,//是否启用点击选中行
-        toolbarAlign:'right',
-        buttonsAlign:'right',//按钮对齐方式
-        sidePagination: 'server', // 设置为服务器端分页
-        //queryParamsType:'', //默认值为 'limit' ,在默认情况下 传给服务端的参数为：offset,limit,sort
-                                // 设置为 ''  在这种情况下传给服务器的参数为：pageSize,pageNumber
-        //queryParams: queryParams,//前端调用服务时，会默认传递上边提到的参数，如果需要添加自定义参数，可以自定义一个函数返回请求参数
-        queryParams: function (params) { // 请求服务器数据时发送的参数，可以在这里添加额外的查询参数，返回false则终止请求
-            return {
-                pageSize: params.limit, // 每页要显示的数据条数
-                offset: params.offset, // 每页显示数据的开始行号
-                sort: params.sort, // 要排序的字段
-                sortOrder: params.order // 排序规则
-            }
-        },
-        sortName: 'id', // 要排序的字段
-        sortOrder: 'desc', // 排序规则
-        columns: [
-            [
-                {
-                    "title": "登录日志",
-                    "halign":"center",
-                    "align":"center",
-                    "colspan": 4,
-                    cellStyle:{
-                        css:{"background-color":"red"}
-                    }
-                }
-            ], [
-            {
-                field: 'Number',
-                title: '序号',
-                sortable: false,
-                align: "center",
-                width: 70,
-                formatter: function (value, row, index) {
-                    //获取每页显示的数量
-                    var pageSize=$('#tableLogin').bootstrapTable('getOptions').pageSize;
-                    //获取当前是第几页
-                    var pageNumber=$('#tableLogin').bootstrapTable('getOptions').pageNumber;
-                    //返回序号，注意index是从0开始的，所以要加上1
-                    return pageSize * (pageNumber - 1) + index + 1;
-                }
-            },{
-                field: 'username', // 返回json数据中的name
-                title: '登录人', // 表格表头显示文字
-                align: 'center', // 左右居中
-                width: 500,
-                valign: 'middle' // 上下居中
-            }, {
-                field: 'logintime',
-                title: '登录时间',
-                align: 'center',
-                width: 360, // 定义列的宽度，单位为像素px
-                valign: 'middle'
-            }, {
-                field: 'loginip',
-                title: '登录IP',
-                align: 'center',
-                width: 360, // 定义列的宽度，单位为像素px
-                valign: 'middle'
-            }
-        ]
-    ]
-    })
-
     $("#tableOper").bootstrapTable({ // 对应table标签的id
         method:'POST',
         contentType: "application/x-www-form-urlencoded",// 解决POST提交问题
@@ -259,7 +177,6 @@
         ]
     })
     function searchShare() {
-        $("#tableLogin").bootstrapTable('refresh');
         $("#tableOper").bootstrapTable('refresh');
     }
     function cellStylesales(value, row, index) {
