--- a/src/main/resources/templates/createNDA.html
+++ b/src/main/resources/templates/createNDA.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
 
-    <title> NDA</title>
+    <title> NDA | 新建交易</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
 
@@ -85,7 +85,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">附件：</label>
                             <div class="col-sm-8">
-                                <input type="hidden" id="haveFile" value="no">
+                                <input type="hidden" id="haveFile" name="haveFile" value="no">
                                 <div id="dropzone" class="dropzone well" ></div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
     toastr.options.positionClass = 'toast-top-center';
     jQuery(function($){
         // 初始化Dropzone控件
-        var signFileName = [];//上次，文件名称
+        var signFileName = "";//文件名称
         try {
             Dropzone.autoDiscover = false;
 
@@ -134,51 +134,23 @@
                 dictCancelUpload: "取消上传",
                 dictCancelUploadConfirmation: "你确定要取消上传吗?",
                 dictRemoveFile: "移除文件",
-                uploadMultiple:true,
+                uploadMultiple:false,
                 //无文件时展示的信息
                 dictDefaultMessage:
                     '<span class="bigger-150 bolder"><i class="ace-icon fa fa-caret-right red"></i> 拖拽文件到此处</span> \
                     <span class="smaller-80 grey">(或点击下面的上传按钮选择待上传文件)</span> <br /> \
+                    \<span class="smaller-80" style="color: red">只能上传一个文件</span> <br /> \
                     <i class="upload-icon ace-icon fa fa-cloud-upload blue fa-3x"></i>'
                 ,
                 init: function() {
-                    //上传文件时触发的事件
-                    this.on("addedfile", function(file,data) {
-                        //浏览器控制台输出js
-                        console.log("File " + file.name + "uploadedsss");
-                        var fileName = file.name;
-                        // 上传文件存在，就删除
-                        if(signFileName.indexOf(fileName) != -1){
-                            this.removeFile(file);
-                        }else{
-                            signFileName.push(fileName);
-                        }
-                    });
                     //上传文件成功时触发的事件
                     this.on("success", function(file,data) {
-                        // var value = $("#nameURL").val();
-                        // var url = "https://ipfs.io/ipfs/"+ data;
-                        // value = value + url + '<br>';
-                        // $("#nameURL").val(value);
-                        //alert(data);
-                        console.log("File " + file.name + "uploaded");
+                        signFileName = "";
+                        signFileName = data[0];
+                        $("#haveFile").val(signFileName)
+
                     });
-                    //移除文件触发的事件
-                    this.on("removedfile", function(file,data) {
-                        console.log("File " + file.name + "removed");
-                        //向后台发送处理数据
-                        $.ajax({
-                            url:"/user/removedfile",
-                            type:"GET",
-                            data:{
-                                fileName:file.name,
-                            },
-                            dateType:"json",
-                            success:function(result) {
-                                console.log(result);
-                            }
-                        });
-                    });
+
                 }
             });
 
