--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -59,7 +59,7 @@
                 <li>
                     <a class="J_menuItem" href="/share">
                         <i class="fa fa fa-file-o"></i>
-                        <span class="nav-label">我的文档</span>
+                        <span class="nav-label">我的交易</span>
                     </a>
                 </li>
                 <li>
