--- a/src/main/resources/templates/NDAList.html
+++ b/src/main/resources/templates/NDAList.html
@@ -29,11 +29,11 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css?v=4.1.0" rel="stylesheet">
     <!-- 引入bootstrap-table样式 -->
-    <link href="https://cdn.bootcss.com/bootstrap-table/1.11.1/bootstrap-table.min.css" rel="stylesheet">
+    <link href="css/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet">
     <!-- bootstrap-table.min.js -->
-    <script src="https://cdn.bootcss.com/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
+    <script src="js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
     <!-- 引入中文语言包 -->
-    <script src="https://cdn.bootcss.com/bootstrap-table/1.11.1/locale/bootstrap-table-zh-CN.min.js"></script>
+    <script src="js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 
     <script type="text/javascript" src="/wangEditor/release/wangEditor.min.js"></script>
     <script type="text/javascript" src="/wangEditor/fullscreen/wangEditor-fullscreen-plugin.js"></script>
