--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@
                                 <img alt="300x200" src="/img/22222.png" style="margin-top:20px;height: 60px;width: 60px;" />
                             </div>
                             <div class="col-md-8" style="margin-top: 20px;">
-                                <a type="button" class="btn btn-primary btn-lg btn-block" href="/share">我的文档</a>
+                                <a type="button" class="btn btn-primary btn-lg btn-block" href="/share">我的交易</a>
                                 <p style="font-size: smaller;margin-left:5px;margin-top: 5px;">
                                     在这里可以查看分享记录
                                 </p>
