--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>NDA | 文件记录</title>
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/default.css">
     <link href="css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
-    <script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+    <script src="/js/jquery.min.js" type="text/javascript"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
     <script src="js/fileinput.js" type="text/javascript"></script>
     <!--简体中文-->
     <script src="js/locales/zh.js" type="text/javascript"></script>
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/htmleaf-demo-time.css">
     <script type="text/javascript" src="js/jquery.eeyellow.Timeline.js"></script>
     <link rel="stylesheet" type="text/css" href="css/jquery.eeyellow.Timeline.css" />
