--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,6 @@
             background-position: auto center;
         }
     </style>
-
 </head>
 
 <body>
@@ -36,7 +35,7 @@
                 <a href="/login" style="color: white">登录</a> | <a href="/register" style="color: white">注册</a>
             </th:block>
             <th:block th:if="${currentUser != null}">
-                <a  th:id="${currentUser.id}" onclick="showUserDetail(this);" style="color: white"> 个人信息</a> | <a th:href="@{/logout(id=${currentUser.id})}" style="color: white"> 注销</a>
+                欢迎你：<a th:id="${currentUser.id}" onclick="showUserDetail(this);" style="color: white" th:text="${currentUser.username}"></a> | <a th:href="@{/logout(id=${currentUser.id})}" style="color: white"> 注销</a>
             </th:block>
 
         </div>
@@ -243,9 +242,6 @@
     }
 
 </script>
-
-
-
 
 </body>
 
