--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,12 +30,18 @@
 <body>
 <div class="container">
     <div class="row clearfix">
-        <div class="col-md-12 column" style="margin-top:10px;margin-left: 80%;width: auto;color: white">
-            <th:block th:if="${currentUser == null}">
-                <a href="/login" style="color: white">登录</a> | <a href="/register" style="color: white">注册</a>
+        <div class="col-md-12 column" style="margin-top:10px;margin-left: 70%;width: auto;color: white">
+            <!--客户端是PC还是移动设备
+            <span style="alignment: left" th:text="${session.clienttype}" /></span>-->
+
+            <th:block th:if="${session.currentUser == null}" >
+                <span> <a href="/login" style="color: white">登录</a> | <a href="/register" style="color: white">注册</a></span>
             </th:block>
-            <th:block th:if="${currentUser != null}">
-                欢迎你：<a th:id="${currentUser.id}" onclick="showUserDetail(this);" style="color: white" th:text="${currentUser.username}"></a> | <a th:href="@{/logout(id=${currentUser.id})}" style="color: white"> 注销</a>
+            <th:block th:if="${session.currentUser != null}">
+                <span>欢迎你：<a th:id="${session.currentUser.id}" onclick="showUserDetail(this);" style="color: white" >
+                                <span th:text="${session.currentUser.username}" />
+                            </a> | <a th:href="@{/logout(id=${session.currentUser.id})}" style="color: white"> 注销</a>
+                </span>
             </th:block>
 
         </div>
