--- a/src/main/resources/templates/createNDA.html
+++ b/src/main/resources/templates/createNDA.html
@@ -78,7 +78,7 @@
                             <div class="col-sm-8">
                                 <select class="form-control" name="username" id="username">
                                     <option  value="">--请选择--</option>
-                                    <option th:each="user:${users}" th:text="${user.username + user.mobilephone}" th:value="${user.username}"></option>
+                                    <option th:each="user:${users}" th:text="${user.username + '  ' + user.mobilephone}" th:value="${user.username}"></option>
                                 </select>
                             </div>
                         </div>
